<resources>
    <string name="app_name">WikiPersona</string>
    <string name="app_fullname">Pocket Persona</string>
    <string name="nav_menu_title">Menu</string>
    <string name="nav_menu_editText">Shadow/Persona</string>
    <string name="nav_menu_searchButton_Text">Search</string>

    <string name="synopsis_title">Synopsis</string>

    <string name="gameInfo_title">Game Information</string>
    <string name="gameInfo_dev">Developer</string>
    <string name="gameInfo_devName">Atlus (P-Studio)</string>
    <string name="gameInfo_pub">Publisher</string>
    <string name="gameInfo_pub1">Atlus (JPN, NA)</string>
    <string name="gameInfo_pub2">Deep Silver (PAL)</string>
    <string name="gameInfo_pub3">Sony</string>
    <string name="gameInfo_genreTitle">Genre</string>
    <string name="gameInfo_genre">RPG</string>
    <string name="gameInfo_plat">Platform</string>
    <string name="gameInfo_consoles">PS3, PS4</string>

    <string name="gameInfoReleaseDate_title">Releases Dates</string>
    <string name="gameInfoReleaseDate_Japan">Japan</string>
    <string name="gameInfoReleaseDate_JapanDate">September 15 2016</string>
    <string name="gameInfoReleaseDate_NorthAmerica">North America</string>
    <string name="gameInfoReleaseDate_NorthAmericaDate">April 4 2017</string>
    <string name="gameInfoReleaseDate_Europe">Europe</string>
    <string name="gameInfoReleaseDate_EuropeDate">April 4 2017</string>

    <string name="categoriesTitle">Categories</string>
    <string name="catFool">Fool</string>
    <string name="catMagician">Magician</string>
    <string name="catPriestess">Priestess</string>
    <string name="catEmpress">Empress</string>
    <string name="catEmperor">Emperor</string>
    <string name="catHierophant">Hierophant</string>
    <string name="catLovers">Lovers</string>
    <string name="catChariot">Chariot</string>
    <string name="catStrength">Strength</string>
    <string name="catHermit">Hermit</string>
    <string name="catFortune">Fortune</string>
    <string name="catJustice">Justice</string>
    <string name="catHangedMan">Hanged Man</string>
    <string name="catDeath">Death</string>
    <string name="catTemperance">Temperance</string>
    <string name="catDevil">Devil</string>
    <string name="catTower">Tower</string>
    <string name="catStar">Star</string>
    <string name="catMoon">Moon</string>
    <string name="catSun">Sun</string>
    <string name="catJudgement">Judgement</string>

    <string name="randomPersona">Random Persona</string>

    <string name="statsPersonaTitle">Base stats</string>
    <string name="statsPersonaStrengthTitle">Strength</string>
    <string name="statsPersonaMagicTitle">Magic</string>
    <string name="statsPersonaEnduranceTitle">Endurance</string>
    <string name="statsPersonaAgilityTitle">Agility</string>
    <string name="statsPersonaLuckTitle">Luck</string>

    <string name="Personality">Personality</string>
    <string name="Weakness">Weakness</string>
    <string name="Resistance">Resistance</string>
    <string name="Arcana">Arcana</string>

    <string name="informationsPersonaTitle">Informations</string>
    <string name="Level">Level</string>
    <string name="HP">HP</string>
    <string name="SP">SP</string>
    <string name="Type">Type</string>
    <string name="Phys">Physical</string>
    <string name="Gun">Gun</string>
    <string name="Fire">Fire</string>
    <string name="Ice">Ice</string>
    <string name="Elec">Electric</string>
    <string name="Wind">Wind</string>
    <string name="Psy">Psychic</string>
    <string name="Nucl">Nuclear</string>
    <string name="Bless">Blessed</string>
    <string name="Curse">Cursed</string>
    <string name="Almi">Almighty</string>
    <string name="EXP">EXP</string>
    <string name="Yen">Yen</string>
    <string name="MaterialDrop">Material Drop</string>
    <string name="SkillCard">Skill Card</string>
    <string name="ListOfSkills">List of Skills</string>
    <string name="Effect">Effect</string>
    <string name="Skill">Skill</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3Activity</string>


</resources>
