<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item android:title="@string/categoriesTitle"
            android:layout_marginRight="25dp"/>
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/icons8psychology50"
            app:showAsAction="always"
            android:title="@string/Personality"
            />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/Weakness"
            android:icon="@mipmap/icons8confusion50"/>

        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/Resistance"
            android:icon="@mipmap/icons8muscle50"/>
        <item
            android:id="@+id/nav_manage"
            android:title="@string/Arcana"
            android:icon="@mipmap/icons8venetianmask50"/>
    </group>


</menu>
