<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true">

    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/appFullname"
                style="@style/P5.TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/app_fullname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/synopsisTitle"
                style="@style/P5.TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/synopsis_title"
                app:layout_constraintEnd_toStartOf="@+id/logoView"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appFullname" />

            <TextView
                android:id="@+id/synopsisText"
                style="@style/P5.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="BLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLABLA"
                app:layout_constraintEnd_toStartOf="@+id/logoView"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/synopsisTitle" />

            <ImageView
                android:id="@+id/logoView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/synopsisTitle"
                app:srcCompat="@mipmap/persona_5_logo" />

            <TextView
                android:id="@+id/gameInfoTitle"
                style="@style/P5.TextTitleBoldOnly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gameInfo_title"
                app:layout_constraintEnd_toEndOf="@+id/logoView"
                app:layout_constraintStart_toStartOf="@+id/logoView"
                app:layout_constraintTop_toBottomOf="@+id/logoView" />

            <TextView
                android:id="@+id/gameInfoDev"
                style="@style/P5.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gameInfo_dev"
                app:layout_constraintStart_toStartOf="@+id/logoView"
                app:layout_constraintTop_toBottomOf="@+id/gameInfoTitle" />

            <TextView
                android:id="@+id/gameInfoDevName"
                style="@style/P5.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/gameInfo_devName"
                app:layout_constraintBottom_toBottomOf="@+id/gameInfoDev"
                app:layout_constraintEnd_toEndOf="@+id/logoView"
                app:layout_constraintStart_toEndOf="@+id/gameInfoDev"
                app:layout_constraintTop_toTopOf="@+id/gameInfoDev"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/gameInfoPublisher"
                style="@style/P5.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/gameInfo_pub"
                app:layout_constraintStart_toStartOf="@+id/gameInfoDev"
                app:layout_constraintTop_toBottomOf="@+id/gameInfoDev" />

            <TextView
                android:id="@+id/gameInfoPublisher1"
                style="@style/P5.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/gameInfo_pub1"
                app:layout_constraintEnd_toEndOf="@+id/gameInfoDevName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/gameInfoPublisher"
                app:layout_constraintTop_toTopOf="@+id/gameInfoPublisher" />

            <TextView
                android:id="@+id/gameInfoPublisher2"
                style="@style/P5.Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/gameInfo_pub2"
                app:layout_constraintEnd_toEndOf="@+id/gameInfoPublisher1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameInfoPublisher1"
                app:layout_constraintTop_toBottomOf="@+id/gameInfoPublisher1" />

            <TextView
                android:id="@+id/gameInfoPublisher3"
                style="@style/P5.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gameInfo_pub3"
                app:layout_constraintEnd_toEndOf="@+id/gameInfoPublisher2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/gameInfoPublisher2"
                app:layout_constraintTop_toBottomOf="@+id/gameInfoPublisher2" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true" />

</android.support.v4.widget.DrawerLayout>